Fixes layout bug on navigation

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,11 +1,11 @@
 /*
 *= require normalize
-*= require layout
-*= require navigation
-*= require sidebar
+*= require_self
 *= require static
 *= require form
-*= require_self
+*= require sidebar
+*= require navigation
+*= require layout
 */
 
 body,
@@ -17,14 +17,6 @@ html {
 body {
   margin: 0;
   padding:0;
-}
-
-#bigcon {
-  position:relative;
-  min-height:100%;
-  min-width: 800px;
-  margin: 0 auto 0 auto;
-  padding-bottom: 45px;   /* Height of the footer */
 }
 
 a {
