--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -1,3 +1,10 @@
+#bigcon {
+  position:relative;
+  min-height:100%;
+  min-width: 800px;
+  margin: 0 auto 0 auto;
+  padding-bottom: 45px;   /* Height of the footer */
+}
 
 div#login {
 
