--- a/app/assets/stylesheets/navigation.css.scss
+++ b/app/assets/stylesheets/navigation.css.scss
@@ -1,13 +1,13 @@
 .form {
   position: absolute;
-  top: 2%;
+  top: 10px;
   right: 5%;
   text-align: right;
 }
 
 #logo {
   position: absolute;
-  top: 3%;
+  top: 18px;
   left: 3%;
 }
 
